# audio_ingest

./: .env.docker  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  alembic.ini  docker-compose.yaml  prestart.sh  pyproject.toml  pytest.ini
migration/: env.py
src/app/: main.py  schemas.py
src/app/api/: __init__.py  audio.py
src/app/core/: common.py  config.py  containers.py
src/app/db/: database.py  models.py
src/app/services/: audio_service.py
src/app/workers/: worker.py
