[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "AndreyFinyak",email = "afinyak@yahoo.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic (>=1.17.1,<2.0.0)",
    "fastapi[standard] (>=0.121.0,<0.122.0)",
    "uvicorn[standard] (>=0.38.0,<0.39.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "dependency-injector (>=4.48.2,<5.0.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "pre-commit (>=4.4.0,<5.0.0)",
    "numpy (>=2.3.4,<3.0.0)",
    "aiofiles (>=25.1.0,<26.0.0)",
    "types-aiofiles (>=25.1.0.20251011,<26.0.0.0)",
    "greenlet (>=3.2.4,<4.0.0)"
]

[tool.poetry]
packages = [{include = "app", from = "src"}]


[tool.poetry.group.dev.dependencies]
isort = "^7.0.0"
black = "^25.9.0"
pytest-cov = "^7.0.0"
pytest = "^9.0.0"
pytest-dotenv = "^0.5.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ["py311"]
skip-string-normalization = true

[tool.isort]
line_length = 79
profile = "black"
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
addopts = "-v --maxfail=1 --disable-warnings"
testpaths = ["tests"]
asyncio_mode = "auto"
